# rag_to_riches

./: .coverage  .gitignore  README.md  build_docs.sh  config.yaml  mkdocs.yml  pyproject.toml  sample.env  serve_docs.sh  sitemap.xml
docs/: index.md
docs/notebooks/nlp/: LLM-youtube_helper.ipynb  NLP-Lesson-00a___libraries_installation.ipynb  NLP-Lesson-00b___visualization_libraries_installation.ipynb  NLP-Lesson-00c___nlp_libraries_installation.ipynb  NLP-Lesson-01___search-corpus.ipynb  NLP-Lesson-02___huggingface_intro_with_sentiment.ipynb  NLP-Lesson-03___zero_shot_classifier.ipynb  NLP-Lesson-04___text_generation.ipynb  NLP-Lesson-05___text_to_image.ipynb  NLP-Lesson-06___ner.ipynb  NLP-Lesson-07___visual_qa.ipynb  NLP-Lesson-08___pretrained.ipynb  NLP-Lesson-08___transfer_learning.ipynb  NLP-Lesson-09___autoclass.ipynb  NLP-Lesson-10___tokenizers.ipynb  NLP-Lesson-11___datasets.ipynb  NLP-Lesson-12___autoclassifier.ipynb  NLP-Lesson-13___carbon-emissions.ipynb  NLP-Lesson-14___social-biases.ipynb  NLP-Lesson-15___fine-tuning.ipynb  NLP-Lesson-16___langchain_basics.ipynb  NLP-Lesson-17___langchain_prompts.ipynb  NLP-Lesson-27___visualbert.ipynb  README.md  Untitled.ipynb  chunk_notebook.ipynb  emissions.csv  emotions-dataset-analysis.ipynb  images.tgz  pyproject.toml  requirements.txt  supportvectors-common.ipynb  trust.sh
docs/notebooks/nlp/.ipynb_checkpoints/: NLP-Lesson-00a___libraries_installation-checkpoint.ipynb  NLP-Lesson-00b___visualization_libraries_installation-checkpoint.ipynb  NLP-Lesson-00c___nlp_libraries_installation-checkpoint.ipynb  (+1 more)
(+100 files in other folders)
