[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipyplot>=1.1.2",
    "jupyter-contrib-nbextensions>=0.7.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pandas-bokeh>=0.5.5",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "svlearn-bootcamp>=0.1.7",
]
